--- a/signin.css
+++ b/signin.css
@@ -72,6 +72,7 @@ body {
     opacity: 1;
     padding: 30px 100px;
 }
+
 .logo {
     font-size: 32px;
     font-weight: 700;
@@ -172,7 +173,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 50%;
+    width: 326px;
 }
 
 .input-field {
@@ -222,55 +223,6 @@ body {
 .signin-link:hover {
     color: #555555;
     text-decoration: underline;
-}
-
-.form-section {
-    margin-top: 40px;
-    margin-bottom: 10px;
-}
-
-.section-title {
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 30px;
-    color: #000000;
-    margin-bottom: 20px;
-}
-
-.form-row {
-    display: flex;
-    gap: 50px;
-    margin-bottom: 20px;
-}
-
-.form-group {
-    flex: 1;
-}
-
-.form-label {
-    display: block;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    color: #000000;
-    margin-bottom: 8px;
-}
-
-.form-control {
-    width: 100%;
-    height: 48px;
-    background-color: #efefef;
-    border: none;
-    border-radius: 24px;
-    padding: 0 16px;
-    font-size: 16px;
-    color: rgba(0, 0, 0, 0.4);
-    outline: none;
-    margin-top:5px ;
-}
-
-.form-control:focus {
-    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .footer {
